[package]
name = "ogmarkup"
version = "0.99.0"
authors = ["Thomas Letan <lthms@soap.coffee>"]
license-file = "LICENSE"
keywords = ["parser", "markup"]
repository = "https://code.soap.coffee/ogmios/ogmarkup.git/"
readme = "README.md"
description = "A markup language for story writers"
edition = "2018"

[features]
default = []
html = ["maud"]

[dependencies]
nom = "7.0.0"

[dependencies.maud]
version = "0.22"
optional = true

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "amours_de_jeunesse"
harness = false